bin/test/fixtures/public/fail/semantic/ourTests/addArrays.jmm
/*  REASON:
    Cannot add arrays
*/

class AddArrays {

    public static void main(String[] a) { 
        int[] i;
        int[] b;

        String d;

        d = a[1];

        i = i + b;
        i = i*b;
        i = i-b;
        i = i/b;
    }
}
